# super-stt

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.dockerfile  Dockerfile  FLAKE_SUMMARY.md  NIX_COMPLETE.md  NOTICE  README.md  README_NIX.md  codebook.toml  docker-build.sh  docker-compose.yml  flake.nix  install.sh  justfile  taplo.toml  uninstall.sh
.claude/agents/: cosmic-app-architect.md  cosmic-stt-applet-architect.md  linux-daemon-engineer.md
.github/: dependabot.yml
.github/assets/: demo-video.webm
.github/workflows/: ci.yml  release.yml  rust-clippy.yml
docs/: SECURITY.md  nix-implementation.md  nix.md
scripts/: setup-stt-group.sh
super-stt/: Cargo.toml  build.rs
super-stt-app/: Cargo.toml  build.rs  justfile
super-stt-app/i18n/en/: super_stt_app.ftl
super-stt-app/resources/: app.desktop  app.metainfo.xml  super-stt-app.desktop  super-stt-app.metainfo.xml
super-stt-app/src/: i18n.rs  main.rs
super-stt-app/src/audio/: mod.rs  networking.rs
super-stt-app/src/core/: app.rs  mod.rs
super-stt-app/src/daemon/: client.rs  mod.rs
super-stt-app/src/state/: mod.rs  models.rs
super-stt-app/src/ui/: messages.rs  mod.rs
super-stt-app/src/ui/views/: about.rs  common.rs  connection.rs  mod.rs  settings.rs  testing.rs
super-stt-cosmic-applet/: Cargo.toml
super-stt-cosmic-applet/data/: com.github.jorge-menjivar.super_stt_cosmic_applet-left.desktop
super-stt-cosmic-applet/resources/: com.github.jorge-menjivar.super_stt_cosmic_applet-full.desktop  com.github.jorge-menjivar.super_stt_cosmic_applet-right.desktop  super-stt-cosmic-applet-full.desktop  super-stt-cosmic-applet-left.desktop  super-stt-cosmic-applet-right.desktop
super-stt-cosmic-applet/src/: lib.rs  main.rs
super-stt-cosmic-applet/src/app/: messages.rs  mod.rs
super-stt-cosmic-applet/src/config/: constants.rs  mod.rs  settings.rs
super-stt-cosmic-applet/src/daemon/: client.rs  mod.rs  rate_limiter.rs  rate_limiter_integration_test.rs  retry.rs  retry_test.rs
super-stt-cosmic-applet/src/models/: mod.rs  state.rs  theme.rs
super-stt-cosmic-applet/src/ui/: mod.rs  views.rs
super-stt-cosmic-applet/src/ui/components/: color_buttons.rs  common.rs  mod.rs  sound_visualization.rs
super-stt-cosmic-applet/src/ui/components/visualizations/: centered_bars.rs  equalizer.rs  mod.rs  pulse.rs  waveform.rs
super-stt-cosmic-applet/src/ui/sections/: app_info.rs  launch.rs  mod.rs  status.rs
super-stt-cosmic-applet/src/ui/sections/settings/: mod.rs  settings.rs
super-stt-cosmic-applet/src/ui/sections/settings/components/: mod.rs  visualization_theme.rs
super-stt-shared/: Cargo.toml
super-stt-shared/src/: auth.rs  auth_integration_test.rs  lib.rs  mod.rs  resource_management.rs
super-stt-shared/src/audio/: analysis.rs  mod.rs
super-stt-shared/src/daemon/: client.rs  mod.rs
super-stt-shared/src/models/: audio.rs  daemon_state.rs  mod.rs  protocol.rs  stt.rs  stt_model.rs  theme.rs  udp.rs
super-stt-shared/src/networking/: mod.rs  udp_parsing.rs
super-stt-shared/src/services/: mod.rs  notification.rs
super-stt-shared/src/utils/: audio.rs  logger.rs  mod.rs
super-stt-shared/src/validation/: mod.rs
super-stt-tui/: .gitignore  ASYNC_AUDIO_ARCHITECTURE.md  ASYNC_AUDIO_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODE_CHANGES_SUMMARY.md  COSMIC_APPLET_AUDIO_FLOW_ANALYSIS.md  DEBUG_TRANSCRIPTION.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  REFACTOR_COMPLETE.md  USAGE.md  package.json  plan.md  pnpm-lock.yaml  run-debug.sh  test-audio-capture.ts  test-hook-race-fix.ts  test-raw-udp.sh  test-realtime-audio.ts  test-record-command.ts  test-tui-connection.ts  test-tui-debug.tsx  test-tui-minimal.tsx  test-udp-auth.ts  tsconfig.json
super-stt-tui/native/: Cargo.toml  README.md
super-stt-tui/native/src/: lib.rs
super-stt-tui/src/: app.tsx  index.tsx  test-udp-simple.ts
super-stt-tui/src/components/: .gitkeep  AudioMeter.tsx  ConnectionStatus.tsx  FrequencyVisualizer.tsx  Header.tsx  RecordingIndicator.tsx  TranscriptionDisplay.tsx  index.ts
super-stt-tui/src/hooks/: useUdpClient.ts
super-stt-tui/src/protocol/: client.ts  index.ts  native-client.ts  parsers.ts  simple-client.ts  types.ts
super-stt/src/: cli.rs  config.rs  daemon_main.rs  download_progress.rs  lib.rs  main.rs
super-stt/src/audio/: beeper.rs  device.rs  mod.rs  processing.rs  recorder.rs  state.rs  streamer.rs
super-stt/src/daemon/: auth.rs  client_management.rs  core.rs  device_management.rs  handlers.rs  mod.rs  model_management.rs  recording.rs  theme_handlers.rs  transcription.rs  types.rs
super-stt/src/input/: audio.rs  mod.rs
super-stt/src/output/: keyboard.rs  mod.rs  preview.rs  preview_typing.rs  preview_typing_tests.rs  typing_thread.rs
super-stt/src/services/: dbus.rs  mod.rs  transcription.rs
super-stt/src/stt_models/: download.rs  mod.rs
super-stt/src/stt_models/voxtral/: audio.rs  mod.rs  model.rs  whisper_exact_processing.rs
super-stt/src/stt_models/whisper/: mod.rs  model.rs
super-stt/systemd/: super-stt.service
