[package]
  name              = "super-stt-app"
  version.workspace = true
  edition.workspace = true
  authors.workspace = true
  license           = "GPL-3.0-only"
  description       = "Super STT client application"
  repository        = "https://github.com/jorge-menjivar/super-stt"

[build-dependencies]
  vergen.workspace = true

[dependencies]
  # Workspace dependencies
  super-stt-shared       = { path = "../super-stt-shared", features = ["analysis"] }
  tokio.workspace        = true
  anyhow.workspace       = true
  serde.workspace        = true
  serde_json.workspace   = true
  log.workspace          = true
  env_logger.workspace   = true
  strum.workspace        = true
  strum_macros.workspace = true

  # COSMIC dependencies
  libcosmic.workspace     = true
  i18n-embed.workspace    = true
  i18n-embed-fl.workspace = true
  futures-util.workspace  = true
  open.workspace          = true
  rust-embed.workspace    = true

  # Cosmic settings dependencies
  slab    = "0.4"
  slotmap = "1.0"

  # Configuration
  toml.workspace = true
  dirs.workspace = true
  libc.workspace = true
  uuid.workspace = true

[features]
  default = []
